update team page

--- a/templates/team.html
+++ b/templates/team.html
@@ -179,27 +179,6 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             <div class="col-12 col-md-6 col-xl-4">
               <div class="team-member">
                 <div class="headshot-wrapper">
-                  <img src="/static/img/headshot-coleman.jpg" class="headshot" alt="Coleman Maher headshot" />
-                </div>
-                <div class="name">
-                  <a href="https://www.linkedin.com/in/coleman-maher-sf/" target="_blank"
-                    rel="noopener noreferrer">Coleman Maher
-                  </a>
-                </div>
-                <div class="title">
-                  {{ gettext("Business Development") }}
-                </div>
-                <div class="bio">
-                  {{ gettext("Coleman is an active cryptocurrency investor and
-                  real estate entrepreneur, owning and managing multiple Airbnb
-                  properties. He studied mathematics at Berkeley.") }}
-                </div>
-              </div>
-            </div>
-
-            <div class="col-12 col-md-6 col-xl-4">
-              <div class="team-member">
-                <div class="headshot-wrapper">
                   <img src="/static/img/headshot-mila.jpg" class="headshot" alt="Mila Choi headshot" />
                 </div>
                 <div class="name">
@@ -526,6 +505,44 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                 </div>
                 <div class="bio">
                   {{ gettext("Chris previously worked at OCZ, Toshiba, Storcentric and Palo Alo Networks as a Full Stack / UI Engineer. He is a creative developer who has over 15 years experience architecting software solutions.") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-kelly.jpg" class="headshot" alt="Kelly Hwang headshot" />
+                </div>
+                <div class="name">
+                  <a href="https://www.linkedin.com/in/kellyhwang" target="_blank"
+                     rel="noopener noreferrer">{{ gettext("Kelly Hwang") }}
+                  </a>
+                </div>
+                <div class="title">
+                  {{ gettext("Investments/Treasury") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Kelly was previously a successful startup founder and venture investor at Upfront Ventures before spending the last few years investing in DeFi. He has an BA in Economics from Stanford.") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-linus.jpg" class="headshot" alt="Linus Chung headshot" />
+                </div>
+                <div class="name">
+                  <a href="https://www.linkedin.com/in/linuschung/" target="_blank"
+                     rel="noopener noreferrer">{{ gettext("Linus Chung") }}
+                  </a>
+                </div>
+                <div class="title">
+                  {{ gettext("VP of Product") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Linus previously worked as Director of Product at Coinbase. Before that, he lead product at companies like Tesla, Pinterest, and LinkedIn. He has a BS in Electrical Engineering from Stanford.") }}
                 </div>
               </div>
             </div>
