--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -239,6 +239,11 @@
             <img src="/static/img/ognToken/poloniex.png" />
           </a>
         </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center">
+          <a target="_blank" rel="noopener noreferrer" href="https://www.bitglobal.com/en-us/spot/trade?q=OGN-BTC">
+            <img src="/static/img/ognToken/bithumb.png" />
+          </a>
+        </div>
       </div>
     </div>
     <div class="text-center">
