--- a/templates/team.html
+++ b/templates/team.html
@@ -85,7 +85,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                 <div class="bio">
                   {{ gettext("Matt was the 3rd PM at YouTube (acquired by
                   Google) and VP PM at Qwiki (acquired by Yahoo) and Bonobos
-                  (acquired by Walmart). He has an MS and BS from Stanford.") }}
+                  (acquired by Walmart). He has a MS and BS from Stanford.") }}
                 </div>
               </div>
             </div>
@@ -523,7 +523,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   {{ gettext("Investments/Treasury") }}
                 </div>
                 <div class="bio">
-                  {{ gettext("Kelly was previously a successful startup founder and venture investor at Upfront Ventures before spending the last few years investing in DeFi. He has an BA in Economics from Stanford.") }}
+                  {{ gettext("Kelly was previously a successful startup founder and venture investor at Upfront Ventures before spending the last few years investing in DeFi. He has a BA in Economics from Stanford.") }}
                 </div>
               </div>
             </div>
