--- a/templates/team.html
+++ b/templates/team.html
@@ -158,48 +158,6 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             <div class="col-12 col-md-6 col-xl-4">
               <div class="team-member">
                 <div class="headshot-wrapper">
-                  <img src="/static/img/headshot-kay.jpg" class="headshot" alt="Kay Yoo headshot" />
-                </div>
-                <div class="name">
-                  <a href="https://www.linkedin.com/in/kay-yoo-53006960/" target="_blank"
-                    rel="noopener noreferrer">{{ gettext("Kay Yoo") }}
-                  </a>
-                </div>
-                <div class="title">
-                  {{ gettext("Director of BD & Ops") }}
-                </div>
-                <div class="bio">
-                  {{ gettext("Kay is a Chartered Professional Accountant (CPA).
-                  She previously worked as a Senior Accountant and then as a
-                  Senior Consultant at KPMG Canada.") }}
-                </div>
-              </div>
-            </div>
-
-            <div class="col-12 col-md-6 col-xl-4">
-              <div class="team-member">
-                <div class="headshot-wrapper">
-                  <img src="/static/img/headshot-mila.jpg" class="headshot" alt="Mila Choi headshot" />
-                </div>
-                <div class="name">
-                  <a href="https://www.linkedin.com/in/so-young-mila-choi-30514769/" target="_blank"
-                    rel="noopener noreferrer">{{ gettext("Mila Choi") }}
-                  </a>
-                </div>
-                <div class="title">
-                  {{ gettext("Regional Manager Korea") }}
-                </div>
-                <div class="bio">
-                  {{ gettext("Mila is leading our community efforts in South
-                  Korea. She previously organized blockhain hackathons and has
-                  degrees from Penn State and Erasmus University Rotterdam.") }}
-                </div>
-              </div>
-            </div>
-
-            <div class="col-12 col-md-6 col-xl-4">
-              <div class="team-member">
-                <div class="headshot-wrapper">
                   <img src="/static/img/headshot-tom.jpg" class="headshot" alt="Tom Linton headshot" />
                 </div>
                 <div class="name">
@@ -322,28 +280,6 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   experience. Prior to joining Origin, Aure worked at multiple
                   startups and Fortune 500 companies. In a past life, he was
                   also a software engineer.") }}
-                </div>
-              </div>
-            </div>
-
-            <div class="col-12 col-md-6 col-xl-4">
-              <div class="team-member">
-                <div class="headshot-wrapper">
-                  <img src="/static/img/headshot-max.png" class="headshot" alt="Max Unger headshot" />
-                </div>
-                <div class="name">
-                  <a href="https://www.linkedin.com/in/max-unger-3ba1621a6/" target="_blank"
-                    rel="noopener noreferrer">{{ gettext("Max Unger") }}
-                  </a>
-                </div>
-                <div class="title">
-                  {{ gettext("Head of Community") }}
-                </div>
-                <div class="bio">
-                  {{ gettext("Before joining Origin, Max helped build
-                  communities for notable blockchain companies like OKEx. He
-                  also worked with RedNova, the marketing and incubation entity
-                  for Du Capital.") }}
                 </div>
               </div>
             </div>
@@ -543,6 +479,25 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                 </div>
                 <div class="bio">
                   {{ gettext("Linus previously worked as Director of Product at Coinbase. Before that, he lead product at companies like Tesla, Pinterest, and LinkedIn. He has a BS in Electrical Engineering from Stanford.") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-andra.jpg" class="headshot" alt="Andra Nicolau headshot" />
+                </div>
+                <div class="name">
+                  <a href="https://www.linkedin.com/in/andranic/" target="_blank"
+                     rel="noopener noreferrer">{{ gettext("Andra Nicolau") }}
+                  </a>
+                </div>
+                <div class="title">
+                  {{ gettext("Head of BD, OUSD") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Andra is responsible for business partnerships relating to Origin Dollar. Before joining Origin, she previously did Business Development for Unstoppable Domains and worked as a Growth Lead at 1inch.") }}
                 </div>
               </div>
             </div>
