--- a/templates/team.html
+++ b/templates/team.html
@@ -497,7 +497,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   {{ gettext("Head of BD, OUSD") }}
                 </div>
                 <div class="bio">
-                  {{ gettext("Andra is responsible for business partnerships relating to Origin Dollar. Before joining Origin, she previously did Business Development for Unstoppable Domains and worked as a Growth Lead at 1inch.") }}
+                  {{ gettext("Andra is a longtime crypto veteran. She was most recently the Head of Growth at 1inch where she raised over $250M. She has spent over 8 years in Silicon Valley and studied Economics at UC Berkeley.") }}
                 </div>
               </div>
             </div>
