add justin to team

--- a/templates/team.html
+++ b/templates/team.html
@@ -505,6 +505,25 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             <div class="col-12 col-md-6 col-xl-4">
               <div class="team-member">
                 <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-justin.jpg" class="headshot" alt="Justin Charlton headshot" />
+                </div>
+                <div class="name">
+                  <a href="https://www.linkedin.com/in/justin-charlton-37292737/" target="_blank"
+                     rel="noopener noreferrer">{{ gettext("Justin Charlton") }}
+                  </a>
+                </div>
+                <div class="title">
+                  {{ gettext("Head of Finance") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Justin started investing in middle school, designed budgets for launching satellites into space (successfully!), and advised tech clients on M&A and strategy for 7 years at PwC and KPMG.") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
                   <img src="/static/img/headshot-you.png" class="headshot" alt="You headshot" />
                 </div>
                 <div class="name"><a href="https://" target="_blank"
