Add myself to the team page

--- a/templates/team.html
+++ b/templates/team.html
@@ -524,6 +524,25 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             <div class="col-12 col-md-6 col-xl-4">
               <div class="team-member">
                 <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-tomh.jpg" class="headshot" alt="Tom Hirst headshot" />
+                </div>
+                <div class="name">
+                  <a href="https://twitter.com/tom_hirst/" target="_blank"
+                     rel="noopener noreferrer">{{ gettext("Tom Hirst") }}
+                  </a>
+                </div>
+                <div class="title">
+                  {{ gettext("Senior Engineer") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Tom helped ship digital projects for the NHS, Umbro, BMW and Meta before entering web3. He has launched multiple successful solo endeavours, including most recently, an NFT project with fully on-chain artwork.") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
                   <img src="/static/img/headshot-you.png" class="headshot" alt="You headshot" />
                 </div>
                 <div class="name"><a href="https://" target="_blank"
