Clean up coin images

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -256,8 +256,8 @@
 
       <div class="stake-banner-blue d-flex flex-column flex-lg-row justify-content-center align-items-center">
         <div class="coins-icon">
-          <img class="ousd-coin" src="/static/img/coins/ousd-coin.svg"/>
-          <img class="ogn-coin" src="/static/img/coins/ogn-coin.svg"/>
+          <img class="ousd-coin" src="/static/img/coins/ousd.svg"/>
+          <img class="ogn-coin" src="/static/img/coins/ogn.svg"/>
         </div>
         <div class="stake-content d-flex flex-column">
           <h1>{{gettext("Participate in governance")}}</h1>
@@ -408,8 +408,8 @@
 
       <div class="stake-banner-blue d-flex flex-column flex-lg-row justify-content-center align-items-center mt-5">
         <div class="coins-icon">
-          <img class="ousd-coin" src="/static/img/coins/ousd-coin.svg"/>
-          <img class="ogn-coin" src="/static/img/coins/ogn-coin.svg"/>
+          <img class="ousd-coin" src="/static/img/coins/ousd.svg"/>
+          <img class="ogn-coin" src="/static/img/coins/ogn.svg"/>
         </div>
         <div class="stake-content d-flex flex-column">
           <h1>{{gettext("Stake your OGN")}}</h1>
