Repair image path

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -33,7 +33,7 @@
       <div class="row like-table align-items-center">
 
         <div class="col-12 order-md-1 col-md-4 text-center">
-          <a href="https://ousd.com"><img src="/static/img/ousd/ousd.svg"></a>
+          <a href="https://ousd.com"><img src="/static/img/coins/ousd.svg"></a>
         </div>
         <div class="col-12 order-md-4 col-md-4 text-center p-4">
           Origin Dollar (OUSD) is the first stablecoin that earns a yield while it's still in your wallet. Access DeFi yields without any of the hassles. No staking. No lockups.
@@ -73,7 +73,7 @@
     <div class="container mb-6">
       <div class="row d-flex flex-wrap align-items-center">
         <div class="col-sm text-center">
-          <a href="https://story.xyz"><img src="/static/img/ousd/ousd.svg"></a>
+          <a href="https://story.xyz"><img src="/static/img/coins/ousd.svg"></a>
         </div>
         <div class="col-sm text-center">
             <a href="https://story.xyz"><img width="60%" style='filter:invert(1)' src="/static/img/origin-story-logo.png" srcset="/static/img/origin-story-logo@2x.png 2x, /static/img/origin-story-logo@3x.png 3x"></a>
