--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,6 +7,10 @@
 {% block content %}
 
 {% with theme_dark=True %}
+{% include 'ogv-banner.html' %}
+{% endwith %}
+
+{% with theme_dark=True %}
 {% include 'navbar.html' %}
 {% endwith %}
 
