--- a/templates/team.html
+++ b/templates/team.html
@@ -418,7 +418,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   </a>
                 </div>
                 <div class="title">
-                  {{ gettext("Social Media Manager") }}
+                  {{ gettext("Head of Community") }}
                 </div>
                 <div class="bio">
                   {{ gettext("Aaron has spent his career building and managing communities. He served as a long-term member of our community team before joining fulltime to help us with social media, content, and marketing at Origin.") }}
@@ -536,6 +536,25 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                 </div>
                 <div class="bio">
                   {{ gettext("Tom helped ship digital projects for the NHS, Umbro, BMW and Meta before entering web3. He has launched multiple successful solo endeavours, including most recently, an NFT project with fully on-chain artwork.") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-youngsun.jpg" class="headshot" alt="Youngsun headshot" />
+                </div>
+                <div class="name">
+                  <a href="https://www.linkedin.com/in/youngsunshin" target="_blank"
+                     rel="noopener noreferrer">{{ gettext("Youngsun Shin") }}
+                  </a>
+                </div>
+                <div class="title">
+                  {{ gettext("Product Manager") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("TODO TODO TODO") }}
                 </div>
               </div>
             </div>
