--- a/templates/team.html
+++ b/templates/team.html
@@ -554,7 +554,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   {{ gettext("Product Manager") }}
                 </div>
                 <div class="bio">
-                  {{ gettext("TODO TODO TODO") }}
+                  {{ gettext("Youngsun is one of the top community builders in Korea. Previously he served as Sr. PM at Coupang and Ops manager at Uber.") }}
                 </div>
               </div>
             </div>
