Update Youngsun bio

--- a/templates/team.html
+++ b/templates/team.html
@@ -554,7 +554,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   {{ gettext("Product Manager") }}
                 </div>
                 <div class="bio">
-                  {{ gettext("Youngsun is one of the top community builders in Korea. Previously he served as Sr. PM at Coupang and Ops manager at Uber.") }}
+                  {{ gettext("Youngsun previously worked as a product manager at Coupang. Before that, he was at Uber as product and operations. Outside of work, he loves building communities and took part in building the Clubhouse Korean community and several Korean NFT communities.") }}
                 </div>
               </div>
             </div>
