Update banner destination

--- a/templates/ogv-banner.html
+++ b/templates/ogv-banner.html
@@ -20,7 +20,7 @@
 </style>
 
 <div class="ogv-banner">
-    <a href="https://blog.originprotocol.com/tokenomics-retroactive-rewards-and-prelaunch-liquidity-mining-campaign-for-ogv-1b20b8ab41c8">
+    <a href="https://governance.ousd.com/claim">
         <div class="container d-flex align-items-center justify-content-center"> 
             <h2 class="m-0">Get ready for the upcoming OGV airdrop</h2>
         </div>
