Update airdrop announcement

--- a/templates/ogv-banner.html
+++ b/templates/ogv-banner.html
@@ -1,6 +1,6 @@
 <style>
   .ogv-banner {
-    background-color: black;
+    background-color: #0d3020;
     color: white;
     position: relative;
     height: 60px;
@@ -22,7 +22,7 @@
 <div class="ogv-banner">
     <a href="https://governance.ousd.com/claim">
         <div class="container d-flex align-items-center justify-content-center"> 
-            <h2 class="m-0">Get ready for the upcoming OGV airdrop</h2>
+            <h2 class="m-0">OGV airdrop is live! Check your eligibility.</h2>
         </div>
     </a>
 </div>
