--- a/templates/team.html
+++ b/templates/team.html
@@ -543,7 +543,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             <div class="col-12 col-md-6 col-xl-4">
               <div class="team-member">
                 <div class="headshot-wrapper">
-                  <img src="/static/img/headshot-youngsun.jpg" class="headshot" alt="Youngsun headshot" />
+                  <img src="/static/img/headshot-youngsun.jpg" class="headshot" alt="Youngsun Shin headshot" />
                 </div>
                 <div class="name">
                   <a href="https://www.linkedin.com/in/youngsunshin" target="_blank"
@@ -554,7 +554,26 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   {{ gettext("Product Manager") }}
                 </div>
                 <div class="bio">
-                  {{ gettext("Youngsun previously worked as a product manager at Coupang. Before that, he was at Uber as product and operations. Outside of work, he loves building communities and took part in building the Clubhouse Korean community and several Korean NFT communities.") }}
+                  {{ gettext("Youngsun previously worked as a product manager at Coupang. Before that, he did product and operations at Uber. He enjoys engaging on Clubhouse and building NFT communities on the ground in Korea.") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-peter.jpg" class="headshot" alt="Peter Gray headshot" />
+                </div>
+                <div class="name">
+                  <a href="https://www.linkedin.com/in/peter-gray/" target="_blank"
+                     rel="noopener noreferrer">{{ gettext("Peter Gray") }}
+                  </a>
+                </div>
+                <div class="title">
+                  {{ gettext("BD Manager, OUSD") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Peter studied business at Tulane University and worked on the sales teams at Palo Alto Networks, VMware, and Alkemi Network before joining Origin as the OUSD BD Manager. He is a musician, hockey player, and avid skier.") }}
                 </div>
               </div>
             </div>
