add new team and investor wallets

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -354,22 +354,22 @@
 
             <div class="reserved-wallet">
               <div class="wallet-name">{{gettext("Team Distribution")}}</div>
-              <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.team_dist_address}}" target="_blank" rel="noopener noreferrer">
-                <div class="wallet-address d-none">{{ogn_stats.team_dist_address}}</div>
-                <div class="wallet-address d-md-none">{{ogn_stats.team_dist_address[:6]}}...{{ogn_stats.team_dist_address[-4:]}}</div>
-                <div class="wallet-address d-none d-md-flex">{{ogn_stats.team_dist_address}}</div>
+              <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.new_team_dist_address}}" target="_blank" rel="noopener noreferrer">
+                <div class="wallet-address d-none">{{ogn_stats.new_team_dist_address}}</div>
+                <div class="wallet-address d-md-none">{{ogn_stats.new_team_dist_address[:6]}}...{{ogn_stats.new_team_dist_address[-4:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.new_team_dist_address}}</div>
               </a>
-              <div class="wallet-balance">{{ogn_stats.team_dist_balance_formatted}} OGN</div>
+              <div class="wallet-balance">{{ogn_stats.new_team_dist_balance_formatted}} OGN</div>
             </div>
 
             <div class="reserved-wallet">
               <div class="wallet-name">{{gettext("Investor Distribution")}}</div>
-              <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.investor_dist_address}}" target="_blank" rel="noopener noreferrer">
-                <div class="wallet-address d-none">{{ogn_stats.investor_dist_address}}</div>
-                <div class="wallet-address d-md-none">{{ogn_stats.investor_dist_address[:6]}}...{{ogn_stats.investor_dist_address[-4:]}}</div>
-                <div class="wallet-address d-none d-md-flex">{{ogn_stats.investor_dist_address}}</div>
+              <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.new_investor_dist_address}}" target="_blank" rel="noopener noreferrer">
+                <div class="wallet-address d-none">{{ogn_stats.new_investor_dist_address}}</div>
+                <div class="wallet-address d-md-none">{{ogn_stats.new_investor_dist_address[:6]}}...{{ogn_stats.new_investor_dist_address[-4:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.new_investor_dist_address}}</div>
               </a>
-              <div class="wallet-balance">{{ogn_stats.investor_dist_balance_formatted}} OGN</div>
+              <div class="wallet-balance">{{ogn_stats.new_investor_dist_balance_formatted}} OGN</div>
             </div>
 
             <div class="reserved-wallet">
