Fix missed string for Nick Hong

--- a/templates/team.html
+++ b/templates/team.html
@@ -562,8 +562,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   <img src="/static/img/headshot-nickh.jpg" class="headshot" alt="Nick Hong headshot" />
                 </div>
                 <div class="name">
-                  <a href="https://twitter.com/pepperonick" target="_blank" rel="noopener noreferrer">{{ gettext("Peter
-                    Gray") }}
+                  <a href="https://twitter.com/pepperonick" target="_blank" rel="noopener noreferrer">{{ gettext("Nick Hong") }}
                   </a>
                 </div>
                 <div class="title">
