add Matt B to team

--- a/templates/team.html
+++ b/templates/team.html
@@ -577,6 +577,24 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             <div class="col-12 col-md-6 col-xl-4">
               <div class="team-member">
                 <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-mattb.png" class="headshot" alt="Matt Bullock headshot" />
+                </div>
+                <div class="name">
+                  <a href="https://uk.linkedin.com/in/mattjbullock" target="_blank" rel="noopener noreferrer">{{ gettext("Matt Bullock") }}
+                  </a>
+                </div>
+                <div class="title">
+                  {{ gettext("Product Designer") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Matt is a product designer specialising in DeFi and Web3 for the past 4 years. He was the first designer to join Augur and later went on to work at Dapper Labs. Before this he was doing the rounds in various advertising and design agencies across London.") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
                   <img src="/static/img/headshot-you.png" class="headshot" alt="You headshot" />
                 </div>
                 <div class="name"><a href="https://" target="_blank"
