Make team adjustments

--- a/templates/team.html
+++ b/templates/team.html
@@ -281,22 +281,6 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             <div class="col-12 col-md-6 col-xl-4">
               <div class="team-member">
                 <div class="headshot-wrapper">
-                  <img src="/static/img/headshot-william.jpeg" class="headshot" alt="William Tong headshot" />
-                </div>
-                <div class="name"><a href="https://www.linkedin.com/in/williamjtong/" target="_blank"
-                  rel="noopener noreferrer">{{ gettext("William Tong") }}</a></div>
-                <div class="title">
-                  {{ gettext("Business Development") }}
-                </div>
-                <div class="bio">
-                  {{ gettext("William Tong was a real estate broker before stumbling into the world of NFTs. He quickly built a reputation as a connector and community builder on the Clubhouse app and within the broader NFT collector community.  ") }}
-                </div>
-              </div>
-            </div>
-
-            <div class="col-12 col-md-6 col-xl-4">
-              <div class="team-member">
-                <div class="headshot-wrapper">
                   <img src="/static/img/headshot-chase.png" class="headshot" alt="Chase Colman headshot" />
                 </div>
                 <div class="name"><a>{{ gettext("Chase Colman") }}</a></div>
@@ -628,16 +612,6 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
         <div class="col-12 col-sm-6 col-lg-4">
         <div class="team-member">
           <div class="headshot-wrapper">
-            <img src="/static/img/headshot-zoe.jpg" class="headshot" alt="Zoe Hoang headshot" />
-          </div>
-          <div class="name">
-            {{ gettext("Zoe Hoang") }}
-          </div>
-        </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-4">
-        <div class="team-member">
-          <div class="headshot-wrapper">
             <img src="/static/img/headshot-moises.jpg" class="headshot" alt="Moisés Sosa headshot" />
           </div>
           <div class="name">
@@ -652,16 +626,6 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
           </div>
           <div class="name">
             {{ gettext("Kevin Lee") }}
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-4">
-        <div class="team-member">
-          <div class="headshot-wrapper">
-            <img src="/static/img/headshot-danil.jpeg" class="headshot" alt="Danil Myakin headshot" />
-          </div>
-          <div class="name">
-            {{ gettext("Danil Myakin") }}
           </div>
         </div>
       </div>
@@ -823,6 +787,22 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
               </div>
               <div class="title">
                 {{ gettext("Paris Hilton") }}
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-xl-4">
+            <div class="team-member">
+              <div class="headshot-wrapper">
+                <img src="/static/img/headshot-william.jpeg" class="headshot" alt="William Tong headshot" />
+              </div>
+              <div class="name">
+                <a href="https://www.linkedin.com/in/williamjtong/" target="_blank"
+                  rel="noopener noreferrer">{{ gettext("William Tong") }}
+                </a>
+              </div>
+              <div class="title">
+                {{ gettext("Lucky Ducky") }}
               </div>
             </div>
           </div>
