Revert "update landing page"
This reverts commit f0192e6646b66bc817725b4d6187757aacb3a4b2.

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -266,10 +266,10 @@
       </div>
       <div class="d-flex justify-content-center">
         <a
-          href="https://bitcompare.net/learn/stablecoins/how-to-earn-interest-on-stablecoins"
+          href="https://www.fastcompany.com/40578033/five-ways-blockchain-could-disrupt-the-sharing-economys-disrupters"
           target="_blank"
-          rel="noopener noreferrer nofollow"
-          ><img class="w-187" src="/static/img/about/bitcompare.png"
+          rel="noopener noreferrer"
+          ><img class="w-187" src="/static/img/about/fast-company@2x.png"
         /></a>
       </div>
       <div class="d-flex justify-content-center">
