Hide products links

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -34,7 +34,7 @@
           <div class="col-4 d-flex flex-column">
             <strong>Organization</strong>
             <a href="{{ url_for('team', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Team") }}</a>
-            <a href="{{ url_for('product', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Products") }}</a>
+            <!-- <a href="{{ url_for('product', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Products") }}</a> -->
             <a href="{{ universal.JOBS_URL }}" target="_blank" rel="noopener noreferrer">{{ gettext("Jobs") }}</a>
           </div>
           <div class="col-4 d-flex flex-column">
