--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -305,7 +305,7 @@
         <div class="col-lg-6">
           <h3>{{gettext("Staked amount by duration")}}</h3>
           <div class="desc">
-            {{gettext("Staked OGN is included as part of the circulating supply. You can <a href='https://www.ousd.com/stake'>stake your OGN</a> on ousd.com")}}
+            {{gettext("Staked OGN is included as part of the circulating supply. You can <a href='https://www.story.xyz/stake'>stake your OGN</a> on ousd.com")}}
           </div>
           
           <div class="row staked-chart">
