Tweaks without bio

--- a/templates/team.html
+++ b/templates/team.html
@@ -579,6 +579,24 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             <div class="col-12 col-md-6 col-xl-4">
               <div class="team-member">
                 <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-jonathans.jpg" class="headshot" alt="Jonathan Snow headshot" />
+                </div>
+                <div class="name">
+                  <a href="https://twitter.com/jonathansnow" target="_blank" rel="noopener noreferrer">{{ gettext("Jonathan Snow") }}
+                  </a>
+                </div>
+                <div class="title">
+                  {{ gettext("Data Engineer") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Jonathan does stuff...") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
                   <img src="/static/img/headshot-you.png" class="headshot" alt="You headshot" />
                 </div>
                 <div class="name"><a href="https://" target="_blank"
